--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,8 @@ html {
 
 body,
 p,
-h3 {
+h3,
+a {
     font-family: 'Advent Pro', sans-serif;
 }
 
@@ -17,30 +18,31 @@ h3 {
     margin-bottom: 60px;
 }
 
-.name_content h3 {
+.name_content h3 a {
     display: block;
     position: relative;
-    font-size: 1.7em;
+    font-size: 1.45em;
     top: 55px;
-    left: -40px;
+    left: -45px;
     color: #2b2b2b;
+    width: 160px;
     text-align: right;
     text-shadow: 1px 1px 0 rgba(43, 43, 43, 0.4);
     font-weight: normal;
     -webkit-transition-duration: .7s;
 }
 
-.row:hover .name_content h3 {
+.row:hover .name_content h3 a {
     color: #fefefe;
 }
 
 
-.name_content:after {
+.name_content h3 a:after {
     display: block;
     position: relative;
-    top: 25px;
-    left: 110px;
-    font-size: 9em;
+    font-size: 4.2em;
+    top: -40px;
+    left: 35px;
     content: "{";
     color: #868686;
     text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.4);
